--- a/src/style/queries.css
+++ b/src/style/queries.css
@@ -27,6 +27,12 @@
     font-size: 6.2rem;
   }
 
+  .btns__btn-title {
+    top: 110%;
+    left: 50%;
+    transform: translate(-50%, 0);
+  }
+
   .clock-types__type {
     font-size: 2.4rem;
   }
